ADD: pictures and different nav headers

--- a/src/articles/about.mdx
+++ b/src/articles/about.mdx
@@ -1,7 +1,10 @@
-# About Larry
+---
+title: 'About Larry'
+date: '2023-08-13'
+---
 
 I'm a software engineer, writer, hiker, and former Air Force officer. I'm interested in cycling, photography, making videos, and challenging myself. I listen to too many podcasts and am trying to read more books.
 
 I live in Colorado with my wife and dog.
 
-This is my place to write about whatever I want. Most people tell you to have a niche. That's probably good advice. But I want a space of my own where I don't need a niche.
+This is my place to write about whatever I want.
