--- a/src/posts/qr-code-micro-app.mdx
+++ b/src/posts/qr-code-micro-app.mdx
@@ -2,7 +2,8 @@
 title: 'Building a QR code micro-app'
 subtitle: "Build a serverless 'hello-world' QR code app with Python and AWS."
 date: '2021-08-14'
-image: '/images/classic_nes_controller.jpg'
+image: '/images/bryce_canyon.jpeg'
+tags: 'travel,skiing'
 ---
 
 HELP!!!
